fixed scrollbar issue

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -189,7 +189,6 @@ div.scroller {
 	width: 100%;
 	padding-top: 3em;
 	position: absolute;
-	overflow-y: scroll;
 }
  
 div.scroller.ng-enter.ng-enter-active {
